[project]
name = "tarp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastchat>=0.1.0",
    "gradio>=5.49.1",
    "huggingface-hub>=0.35.3",
    "iprogress>=0.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "lmstudio>=1.5.0",
    "nltk>=3.9.1",
    "numpy<2.3",
    "protobuf>=6.32.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "triton>=3.4.0",
]

[tool.uv.workspace]
members = [
    "SpecForge",
]
